--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "third/mimalloc"]
 	path = third/mimalloc
-	url = https://github.com/microsoft/mimalloc.git
+	url = http://bully.vip:2080/Third/mimalloc.git
